# lib/db/src/schema/index.ts
@@ -1,1 +1,2 @@
 export * from "./projects";
+export * from "./virtual_tour";
